Fri Jun  3 09:27:31 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (URI::HTTP#request_uri): return nil when the uri
	  is path-rootless form. Bug #4759

Thu Jun  2 23:51:03 2011  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb: Improve the line ending detection algorithm
	  patch by Alexey).

Thu Jun  2 20:05:57 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_io_s_write, rb_io_s_binwrite): return!!!

Thu Jun  2 16:29:34 2011  Shota Fukumori  <sorah@tubusu.net>

	* io.c: Add File.write, File.binwrite. [Feature #1081] [ruby-core:21701]

	* test/ruby/test_io.rb: Test for File.write, File.binwrite.

	* NEWS: News for above.

Thu Jun  2 12:33:09 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (io_flush, rb_io_flush): need to fsync() when ruby calls internal
	  flush. [ruby-core:36670] [Bug #4813]

Thu Jun  2 07:56:24 2011  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c: reduce CPU power required by an eventloop.

Tue May 31 21:28:33 2011  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_signal.rb (TestSignal#test_signal_requiring):
	  redirect stderr to null device.

Thu Jun  2 00:45:26 2011  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: fix for uninitialized global variables.
	  [Ruby 1.9 - Bug #4811]

Wed Jun  1 21:57:08 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (native_sleep): fix 1000times calculation error.
	  this is a regression since r31457. [Bug #4808] [ruby-dev:43606]

Wed Jun  1 17:19:16 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c: remove unused macro.

Wed Jun  1 15:42:18 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (peek_n): new macro to see next nth char.

Wed Jun  1 15:40:46 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (gem): fix for rubygems change.

Wed Jun  1 14:07:57 2011  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*: Imported minitest 2.2.2 (r6281)
	* test/minitest/*: ditto
