@@ -1,3 +1,8 @@
+Fri Jun  3 19:58:14 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* io.c (io_fflush): windows -- call fsync() only when the FD is tied to
+	  file, because if the FD is pipe, it blocks.
+
 Fri Jun  3 09:27:31 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/net/http.rb (URI::HTTP#request_uri): return nil when the uri
